--- a/index.css
+++ b/index.css
@@ -51,16 +51,48 @@
 	);
 }
 .audio-element:after {
-	content: attr(frequency);
+	content: 'hz';
 	position: absolute;
 	bottom: -20px;
 	height: 20px;
 	left: 50%;
-	width: 40px;
-	margin-left: -20px;
-	text-align: center;
+	width: 60px;
+	margin-left: -35px;
+	text-align: right;
 	font-family: sans-serif;
 	font-size: 12px;
 	line-height: 20px;
+	/*outline: 1px solid gray;*/
+	z-index: 1;
+}
+.audio-element:focus{
+	/*z-index: 2;*/
+}
+.audio-element-frequency {
+	position: absolute;
+	bottom: -20px;
+	height: 20px;
+	left: 50%;
+	width: 60px;
+	margin-left: -25px;
+	text-align: right;
+	font-family: sans-serif;
+	font-size: 12px;
+	line-height: 20px;
+	background: none;
+	z-index: 2;
 
+	/*width: 2.5rem;*/
+	/*margin-right: .5rem;*/
+	min-width: 0;
+	/*font-size: 1rem;*/
+	padding: 0 10px 0 0px;
+	border: none;
+	box-shadow: none!important;
+	outline: none!important;
+	/*outline: 1px solid gray;*/
+	/*text-align: left;*/
+	border-radius: 0;
+}
+.audio-element-frequency:focus {
 }
