--- a/index.css
+++ b/index.css
@@ -5,21 +5,21 @@
 @import './node_modules/slidy/index.css';
 
 .sound-background-designer {
-
 }
 
 .audio-elements {
-	height: 100px;
+	height: 120px;
 	width: 100%;
 	position: relative;
 	cursor: copy;
+	overflow: hidden;
 }
 
 .audio-element {
 	position: absolute;
 	min-width: 20px;
 	/*margin-left: -10px;*/
-	height: 100%;
+	height: calc(100% - 20px);
 	cursor: move;
 	border: 0;
 	border-radius: 0;
@@ -65,9 +65,6 @@
 	/*outline: 1px solid gray;*/
 	z-index: 1;
 }
-.audio-element:focus{
-	/*z-index: 2;*/
-}
 .audio-element-frequency {
 	position: absolute;
 	bottom: -20px;
@@ -93,6 +90,4 @@
 	/*outline: 1px solid gray;*/
 	/*text-align: left;*/
 	border-radius: 0;
-}
-.audio-element-frequency:focus {
 }
